--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -64,8 +64,8 @@ header{
 
 .footer_content{
     height: 30px;
-    background: #001529;
-    color: #fff;
+    background: #ffffff;
+    color: #000000;
     text-align: center;
     line-height: 30px;
 }
